8325417: [lworld] Incorrect re-execution state at uncommon traps emitted by acmp